--- a/index.html
+++ b/index.html
@@ -5,69 +5,106 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Daily Quote</title>
   <style>
-body {
-  font-family: 'Courier New', monospace;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  margin: 0;
-  background: #fff;
-  color: #000;
-}
+    body {
+      font-family: 'Courier New', monospace;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      margin: 0;
+      background: #fff;
+      color: #000;
+    }
 
-#quote-display {
-  display: flex;
-  flex-direction: column; /* Stack lines vertically */
-  align-items: center;
-  margin: 20px;
-  padding: 20px;
-  background: #f9f9f9;
-  border: 3px solid #ddd;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  text-align: center;
-}
+    #quote-display {
+      display: flex;
+      flex-direction: column; /* Stack lines vertically */
+      align-items: center;
+      margin: 20px;
+      padding: 20px;
+      background: #f9f9f9;
+      border: 3px solid #ddd;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+      text-align: center;
+      width: 80%; /* Adjust width for larger screens */
+      max-width: 800px; /* Limit width on large screens */
+      min-width: 300px; /* Minimum width for very small screens */
+    }
 
-.word-container {
-  display: flex; /* Group characters of a word together */
-  flex-wrap: nowrap; /* Prevent wrapping within a word */
-  margin-right: 5px; /* Add spacing between words */
-}
+    .word-container {
+      display: flex; /* Group characters of a word together */
+      flex-wrap: nowrap; /* Prevent wrapping within a word */
+      margin-right: 5px; /* Add spacing between words */
+    }
 
-.quote-line, .author-line {
-  display: flex;
-  flex-wrap: wrap; /* Allow words to wrap to the next line */
-  justify-content: center;
-  margin-top: 10px;
-}
+    .quote-line, .author-line {
+      display: flex;
+      flex-wrap: wrap; /* Allow words to wrap to the next line */
+      justify-content: center;
+      margin-top: 10px;
+    }
 
-.split-flap {
-  display: inline-block;
-  font-size: 2rem;
-  margin: 1px;
-  width: 2ch;
-  height: 2.5rem;
-  overflow: hidden;
-  background: #ddd;
-  color: #000;
-  text-align: center;
-  line-height: 2.5rem;
-  border: 1px solid #bbb;
-  border-radius: 3px;
-  box-shadow: inset 0 0 5px #ccc;
-  transition: transform 0.3s ease-in-out, background 0.3s, color 0.3s;
-}
+    .split-flap {
+      display: inline-block;
+      font-size: 2rem;
+      margin: 1px;
+      width: 2.5ch; /* Slightly larger for better readability */
+      height: 3rem;
+      overflow: hidden;
+      background: #ddd;
+      color: #000;
+      text-align: center;
+      line-height: 3rem;
+      border: 1px solid #bbb;
+      border-radius: 3px;
+      box-shadow: inset 0 0 5px #ccc;
+      transition: transform 0.3s ease-in-out, background 0.3s, color 0.3s;
+    }
 
-.space-flap {
-  background: #ddd; /* Same as other flaps */
-  border: 1px solid #bbb; /* Ensure consistent borders */
-}
+    .space-flap {
+      background: #ddd; /* Same as other flaps */
+      border: 1px solid #bbb; /* Ensure consistent borders */
+    }
 
-.split-flap:hover {
-  background: #bbb;
-  color: #222;
-}
+    .split-flap:hover {
+      background: #bbb;
+      color: #222;
+    }
+
+    /* Responsive Styles */
+    @media (max-width: 768px) {
+      #quote-display {
+        padding: 15px; /* Reduce padding for smaller screens */
+      }
+
+      .split-flap {
+        font-size: 1.5rem; /* Adjust font size */
+        width: 1.5ch;
+        height: 2rem;
+        line-height: 2rem;
+      }
+
+      .quote-line, .author-line {
+        margin-top: 5px; /* Reduce spacing for better fit */
+      }
+    }
+
+    /* Larger screens */
+    @media (min-width: 1200px) {
+      #quote-display {
+        width: 70%; /* Use more screen real estate */
+        max-width: 1000px; /* Limit maximum width */
+        padding: 30px; /* Add more padding for larger screens */
+      }
+
+      .split-flap {
+        font-size: 2.5rem; /* Slightly larger text */
+        width: 3ch;
+        height: 3.5rem;
+        line-height: 3.5rem;
+      }
+    }
   </style>
 </head>
 <body>
